// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CallMethodRequest schema test invalid values: 0 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  must have required property 'inputArguments'[39m
[31m    Path:     CallMethodRequest.schema.json#/required[39m
[31m[39m[31m  must have required property 'methodId'[39m
[31m    Path:     CallMethodRequest.schema.json#/required[39m
[31m[39m"
`;

exports[`CallMethodRequest schema test invalid values: 1 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  must have required property 'inputArguments'[39m
[31m    Path:     CallMethodRequest.schema.json#/required[39m
[31m[39m"
`;

exports[`CallMethodRequest schema test invalid values: 2 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  must have required property 'methodId'[39m
[31m    Path:     CallMethodRequest.schema.json#/required[39m
[31m[39m[31m  /inputArguments must be array[39m
[31m    Received: [33m<empty string>[39m[31m[39m
[31m    Path:     CallMethodRequest.schema.json#/properties/inputArguments/type[39m
[31m[39m"
`;

exports[`CallMethodRequest schema test invalid values: 3 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  /methodId must NOT have fewer than 1 characters[39m
[31m    Received: [33m<empty string>[39m[31m[39m
[31m    Path:     CallMethodRequest.schema.json#/properties/methodId/minLength[39m
[31m[39m"
`;

exports[`CallMethodRequest schema test invalid values: 4 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  must have required property 'inputArguments'[39m
[31m    Path:     CallMethodRequest.schema.json#/required[39m
[31m[39m[31m  must NOT have additional properties, but found 'namespaceIndex'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     CallMethodRequest.schema.json#/additionalProperties[39m
[31m[39m[31m  /methodId must be string[39m
[31m    Received: [33m<number>[39m[31m 1[39m
[31m    Path:     CallMethodRequest.schema.json#/properties/methodId/type[39m
[31m[39m"
`;
